# Securesnap

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
album/: admin.py  views.py
album/migrations/: 0001_initial.py  0002_initial.py  0004_remove_albumimage_album_image_unique_name_user_and_more.py
album/templates/album/: delete-album-image.html  delete-album.html  upload-image.html
api/: serializers.py  urls.py  views.py
docs/database/: documentations.md
newenv/: pyvenv.cfg
newenv/Scripts/: activate  activate.bat
photo_share/: settings.py  urls.py
photo_share/album/: admin.py  forms.py  models.py  urls.py  views.py
photo_share/album/migrations/: 0001_initial.py  0002_alter_album_options_and_more.py  0003_alter_album_status.py  0004_remove_albumimage_album_image_unique_name_user_and_more.py  0005_alter_albumimage_album_alter_albumimage_user.py  0006_alter_album_user.py
photo_share/photo_share/: asgi.py  settings.py  urls.py  wsgi.py
photo_share/photos/: admin.py  forms.py  models.py  urls.py  views.py
photo_share/templates/: base.html  index.html  navbar.html
photo_share/user/: admin.py  forms.py  models.py  urls.py  views.py
photos/: admin.py  forms.py  models.py  views.py
photos/migrations/: 0001_initial.py  0002_alter_image_name.py  0002_initial.py  0003_imagelikes.py
photos/tests/: test_models.py
templates/: base.html  index.html  navbar.html  new-uploads.html
user/: forms.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/tests/: test_models.py
utils/forms/: widgets.py
(+19 files in other folders)
